dark mode and some ui fixes

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,4 @@
-:root {
-  color: rgba(0, 0, 0, 0.87);
-  background-color: #ffffff;
-}
+
 
 body {
   margin: 0 ;
